--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
 <div id="wb_citata10" style="position:absolute;left:240px;top:403px;width:443px;height:15px;z-index:9;">
 <img src="images/citata10.gif" id="citata10" alt="" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none;"></div>
 </div>
-<div id="wb_Nazvanietext" style="position:absolute;left:428px;top:445px;width:396px;height:143px;z-index:28;">
+<div id="wb_Nazvanietext2" style="position:absolute;left:428px;top:445px;width:396px;height:143px;filter:alpha(opacity=0);opacity:0.00;z-index:28;">
+
+<img src="images/Nazvanietext.png" id="Nazvanietext2" alt="" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none;"></div>
+
+<div id="wb_Nazvanietext" style="position:absolute;left:428px;top:445px;width:396px;height:143px;z-index:29;">
+
 <a href="#" onclick="ShowObjectWithEffect('wb_Menu5', 1, 'fade', 1000, 'swing');ShowObjectWithEffect('wb_Menu4', 1, 'fade', 1000, 'swing');ShowObjectWithEffect('wb_Menu3', 1, 'fade', 1000, 'swing');ShowObjectWithEffect('wb_Menu2', 1, 'fade', 1000, 'swing');ShowObjectWithEffect('wb_Menu1', 1, 'fade', 1000, 'swing');Animate('wb_Kniga', '370', '250', '', '', '100', 1000, '');Animate('wb_Nazvanietext', '', '', '', '', '0', 500, '');return false;"><img src="images/Nazvanietext.png" id="Nazvanietext" alt="" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none;"></a></div>
 <div id="wb_Kniga" style="position:absolute;left:1212px;top:897px;width:950px;height:760px;filter:alpha(opacity=0);opacity:0.00;z-index:29;">
 <img src="images/Kniga2.png" id="Kniga" alt="" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none;"></div>
