--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ $(document).ready(function()
 </div>
 </div>
 <div id="wb_IconKa" style="position:absolute;left:38px;top:35px;width:20px;height:20px;z-index:38;">
-<a href="#" onmouseover="ShowObject('TextArea5', 0);ShowObject('TextArea4', 0);ShowObject('TextArea3', 0);ShowObject('TextArea2', 0);ShowObject('TextArea1', 0);ShowObject('TextArea6', 1);return false;" onmouseout="ShowObject('TextArea5', 1);ShowObject('TextArea4', 1);ShowObject('TextArea3', 1);ShowObject('TextArea2', 1);ShowObject('TextArea1', 1);ShowObject('TextArea6', 0);return false;"><img src="images/I2.png" id="IconKa" alt="" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none;"></a></div>
+<a href="#" onmouseover="ShowObject('wb_TextArea7jQueryAccordion1', 0);ShowObject('TextArea5', 0);ShowObject('TextArea4', 0);ShowObject('TextArea3', 0);ShowObject('TextArea2', 0);ShowObject('TextArea1', 0);ShowObject('TextArea6', 1);return false;" onmouseout="ShowObject('wb_TextArea7jQueryAccordion1', 1);ShowObject('TextArea5', 1);ShowObject('TextArea4', 1);ShowObject('TextArea3', 1);ShowObject('TextArea2', 1);ShowObject('TextArea1', 1);ShowObject('TextArea6', 0);return false;"><img src="images/I2.png" id="IconKa" alt="" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none;"></a></div>
 </div>
 </div>
 </body>
